Add FAQ entry: illegal reflective access